--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                 <h1>Ape Into high-yield pools</h1>
             </div>
             <div class="card_main">
+                <img src="./svg/cubo3.svg" alt="">
                 <h1>Super cheap transctions</h1>
             </div>
             <div class="card_main">
@@ -96,6 +97,7 @@
                 <h1>low slippage and fees, even on large trades</h1>
             </div>
             <div class="card_main">
+                <img src="./svg/cubo3.svg" alt="">
                 <h1>oracle network battle-tested wieth over $4billion</h1>
             </div>
         </div>
